# uc-online-mod

./: CMakeLists.txt  README.md  config.ini
.github/workflows/: build.yml
include/: ini_config.hpp  logger.hpp  path_utils.hpp  uc_online.hpp  uc_online64.hpp
sdk/public/steam/: steam_gameserver.h
src/: ini_config.cpp  logger.cpp  main.cpp  main64.cpp  resources.rc  uc_online.cpp  uc_online64.cpp
